# personal-shopper

./: .gitignore  README.md  main.py  pyproject.toml  speed.md
deploy/systemd/: personal-shopper-cart-worker.service  personal-shopper-slack.service
personal_shopper/: config.py
personal_shopper/cart/: __init__.py  automation.py  worker.py
personal_shopper/database/: db.py  schema.py
personal_shopper/recipes/: fetcher.py  models.py
personal_shopper/slack/: bot.py  messages.py  service.py  store.py
tests/: test_cart_automation.py  test_cart_worker.py  test_config.py  test_database.py  test_fetcher.py  test_slack_bot.py  test_slack_messages.py  test_slack_service.py  test_slack_store.py
